# Connect3Dp

./: .editorconfig  .gitignore  ABSWallHook.gcode  Connect3Dp.sln  Directory.Build.props  README.md  folder.yml
Connect3Dp/: Connect3Dp.csproj  Connect3Dp.http  Connect3Dp.sln  Dockerfile  HeatingSchedule.cs  HeatingSettings.cs  IConfigurable.cs  IMachineCollectionService.cs  IMachineConfigurationService.cs  IMachineFileService.cs  IUniquelyIdentifiable.cs  JeIdentity.cs  JsonFileBasedMachineConfigurationStore.cs  MachineAirDuctMode.cs  MachineException.cs  MachineFeature.cs  MachineMessage.cs  MachineState.cs  MachineStatus.cs  MachineWebSocketService.cs  Material.cs  MaterialColor.cs  MaterialUnit.cs  MonoMachine.cs  Operation.cs  PeriodicAsyncAction.cs  PrintOptions.cs  Program.cs  README.md  WeatherForecast.cs
Connect3Dp.Host/: .gitignore  Connect3Dp.Host.csproj  Connect3Dp.Host.sln  Dockerfile  JeIdentity.cs  Program.cs  README.md  appsettings.json  machineConfigurations.json
Connect3Dp.JS/: README.md  tgconfig.json  tsconfig.json
Connect3Dp.Validation/: Connect3Dp.Validation.csproj  ConnectionSetup.cs  Program.cs  SavedConfiguration.cs
Elegoo3Dp/: File uploads USB.yml  File uploads.yml  enable video stream.yml  get history ids.yml  lights are on.yml  opencollection.yml  reaad archives.yml
JeIdentity.NET/: IJeIdentityProvider.cs  JeIdentity.csproj  JeIdentityResolver.cs  README.md  (+2 more)
JeIdentity.NET.AspNetCore/: JeIdentity.AspNetCore.csproj  JeIdentity.AspNetCore.sln  README.md
Kiosks/OD-1/simulator/: Arduino.h  CMakeLists.txt  lv_conf.h  main.cpp
(+363 files in other folders)
